ulteriori errori di compilazione